grammar.js
    module: $ => seq(
      repeat($._newline),
      repeat($._line_start),
      repeat($._newline),
    ),

    _line_start: $ => seq(
      choice(
        $._inline_expressions,
        $._block_expression,
      ),
    ),

    _expression: $ => choice(
      $._term_ext,
      $._assignment,
      $.call,
      $.yield,
      $.import,
      $.export,
      $.debug,
    ),

    _term_ext: $ => choice(
      $._term,
      $.range,
      $.range_inclusive,
      $.binary_op,
      $.comparison_op,
      $.boolean_op,
      $.function,
      $.chain,
      $.not,
    ),

    _term: $ => choice(
      $._constants,
      $.number,
      $.string,
      $.identifier,
      $.meta,
      $.parenthesized,
      $.tuple,
      $.list,
      $.map,
      $.negate,
    ),

    _expressions: $ => choice(
      $._expression,
      $.comma_separated,
    ),

    comma_separated: $ => seq(
      $._expression,
      repeat1(seq(
        ',',
        optional($._newline),
        $._expression,
      )),
      optional(','),
    ),

    block: $ => seq(
      $._indent,
      repeat1($._line_start),
      $._dedent,
    ),

    _line_or_block: $ => choice(
      $._inline_expressions,
      $.block,
      // Allow the expression to be left incomplete
      $._newline,
    ),

    chain: $ => prec(PREC.chain, seq(
      // The start of the chain
      field('start', $._term),
      // The chain's subsequent expressions
      repeat1(
        choice(
          $.null_check, // ?
          $.call_args,  // ()
          $.index,      // []
          $.lookup,     // .
        )
      ),
    )),

    // Paren-free calls
    // e.g. `f 1, 2`
    call: $ => prec.right(PREC.call, seq(
      field('function', choice(
        $.identifier,
        $.chain,
      )),
      $._call_args,
    )),

    // Paren-free calls that can have indented arguments
    // e.g.:
    //   my_fn
    //     1, 2
    call_indented: $ => prec.right(PREC.call, seq(
      field('function', choice(
        $.identifier,
        $.chain,
      )),
      seq(
        $._indent,
        $._call_args,
        $._dedent,
      ),
    )),

    // Parenthesized call args, captured in a chain
    // e.g. `f(1, 2)`
    //        ^^^^^^ call_args
    //       ^ chain start
    call_args: $ => seq(
      token.immediate('('),
      optional($._call_args),
      ')'
    ),

    _call_args: $ => prec.right(seq(
      $.call_arg,
      repeat(
        seq(
          ',',
          optional($._newline),
          $.call_arg,
        ),
      ),
      optional(seq(
        ',',
        optional($._newline),
        alias($._call_map_block_arg, $.call_arg),
      )),
    )),

    call_arg: $ => choice(
      prec.right(seq(
        $._term_ext,
        optional($.ellipsis),
      )),
      $.call,
      // Allow nested function calls in arguments with higher precedence
      prec.right(PREC.chain, $.chain),
    ),

    // Index operation, captured in a chain
    // e.g. `f[1]`
    //        ^^^ index
    //       ^ chain start
    assign: $ => prec.right(PREC.assign, seq(
      field('lhs', choice(
        $._assign_target,
        $.unpacked_map,
      )),
      $._assign_rhs,
    )),

    _assign_rhs: $ => prec.right(PREC.assign, seq(
      '=',
      field('rhs', choice(
        seq(
          $._indent,
          choice(
            $._expression,
            $.assign_expressions,
          ),
          $._dedent,
        ),
        choice(
          $._expression,
          $.assign_expressions,
          $.map_block,
        ),
      ))
    )),

    _assign_target: $ => choice(
      $.identifier,
      $.meta,
      $.chain,
    ),

    variable: $ => seq(
      $.identifier,
      optional(seq(
        ':',
        $.type,
      )),
    ),

    type: $ => prec.right(seq(
      $.identifier,
      optional('?'),
    )),

    modify_assign: $ => choice(
      assign_op($, '-=', prec.right),
      assign_op($, '+=', prec.right),
      assign_op($, '*=', prec.right),
      assign_op($, '/=', prec.right),
      assign_op($, '%=', prec.right),
      assign_op($, '^=', prec.right),
    ),

    binary_op: $ => choice(
      binary_op($, choice('-', '+'), $._operator_continuation_add, prec.left, PREC.add),
      binary_op($, choice('*', '/', '%'), $._operator_continuation_multiply, prec.left, PREC.multiply),
      binary_op($, '^', $._operator_continuation_power, prec.right, PREC.power),
    ),

    comparison_op: $ => binary_op(
      $,
      choice('!=', '==', '>=', '>', '<=', '<'),
      $._operator_continuation_comparison,
      prec.left,
      PREC.comparison,
    ),

    break: _ => 'break',
    continue: _ => 'continue',
    null: _ => 'null',
    true: _ => 'true',

    identifier: _ => id,
    meta_id: _ => meta_id,
    test: _ => '@test',

    meta: $ => choice(
      seq(
        $.test,
        field('name', $.identifier),
      ),
      prec.right(seq(
        field('id', $.meta_id),
        optional(field('name', $.identifier)),
      )),
      '@[]',
      '@||',
      '@+',
      '@-',
      '@*',
      '@/',
      '@%',
      '@^',
      '@+=',
      '@-=',
      '@*=',
      '@/=',
      '@%=',
      '@^=',
      '@==',
      '@!=',
      '@>',
      '@>=',
      '@<',
      '@<=',
    ),

    return: $ => keyword_expression_multi($, 'return', PREC.keyword),
    throw: $ => keyword_expression_multi($, 'throw', PREC.keyword),

    number: _ => token(
      choice(
        // Ints
        /\d[\d_]*(e[+-]?\d[\d_]*)?/,
        // Floats
        /[\d_]*\.\d[\d_]*(e[+-]?\d[\d_]*)?/,
        // Binary
        /0b[01][01_]*/,
        // Octal
        /0o[0-7][0-7_]*/,
        // Hex
        /0x[0-9a-fA-F][0-9a-fA-F_]*/,
      ),
    ),

    _flexi_comma: $ => seq(
      repeat($._newline),
      token.immediate(','),
      repeat($._newline),
    ),

    map: $ => seq(
      '{',
      optional($._newline),
      optional(seq(
        $.entry_inline,
        repeat(seq(
          $._flexi_comma,
          $.entry_inline,
        )),
        optional($._flexi_comma),
      )),
      optional($._newline),
      '}'
    ),

    entry_inline: $ => seq(
      field('key', $._map_key),
      optional(seq(
        ':',
        field('value', $._expression),
      )),
    ),

    map_block: $ => seq(
      $._indent,
      repeat1($.entry_block),
      $._dedent,
    ),

    entry_block: $ => seq(
      field('key', $._map_key),
      ':',
      field('value', choice(
        alias($._map_block_tuple_value, $.comma_separated),
        $._line_or_block,
        $.call_indented,
        $.map_block,
      )),
    ),

    _map_key: $ => choice(
      $.identifier,
      $.meta,
      $.string,
    ),

    unpacked_map: $ => seq(
      '{',
      optional($._newline),
      optional(seq(
        $._unpacked_field,
        repeat(seq(
          $._flexi_comma,
          $._unpacked_field,
        )),
        optional($._flexi_comma),
      )),
      optional($._newline),
      '}'
    ),

    _unpacked_field: $ => choice(
      field('binding', $.variable),
      seq(
        field('source', choice(
          $.identifier,
          $.string,
        )),
        'as',
        field('binding', $.variable),
      ),
    ),

    string: $ => choice(
      seq(
        alias($._string_start, $.string_quote),
        optional($.string_content),
        alias($._string_end, $.string_quote),
      ),
      seq(
        $._raw_string_start,
        optional($.raw_string_content),
        $._raw_string_end,
      ),
    ),

    string_content: $ => repeat1(
      choice(
        $.escape,
        $.interpolation,
        /./,
        /\s/
      )
    ),

    raw_string_content: $ => repeat1(/./),

    interpolation: $ => seq(
      '{',
      $._interpolation_start,
      optional($._expressions),
      optional($.format),
      $._interpolation_end,
      '}',
    ),

    format: $ => seq(
      ':',
      choice(
        $.number,
        seq(
          optional($.fill_char),
          $.alignment,
          $.number,
        ),
        repeat(/./),
      )
    ),

    fill_char: $ => /./,
    alignment: $ => choice('<', '^', '>'),

    if: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      choice(
        seq(
          'then',
          field('then', $._expression),
          optional(
            seq(
              'else',
              field('else', $._expression),
            )
          ),
          $._newline,
        ),
        seq(
          field('then', $.block),
          repeat($.else_if),
          optional($.else),
        ),
        $._newline,
      ),
    )),

    else: $ => seq(
      'else',
      $.block,
    ),

    for: $ => seq(
      'for',
      field('args', $.for_args),
      'in',
      field('range', $._expression),
      field('body', $._line_or_block),
    ),

    for_args: $ => seq(
      $._for_arg,
      repeat(
        seq(
          ',',
          $._for_arg,
        )
      ),
    ),

    _for_arg: $ => choice(
      $.variable,
      $.unpacked_map,
    ),

    until: $ => seq(
      'until',
      field('condition', $._expression),
      field('body', $._line_or_block),
    ),

    while: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $._line_or_block),
    ),

    loop: $ => prec.right(seq(
      'loop',
      field('body', $._line_or_block),
    )),

    function: $ => seq(
      $.args,
      optional(seq(
        '->',
        $.type
      )),
      field('body', $._line_or_block),
    ),

    args: $ => seq(
      "|",
      optional(seq(
        $.arg,
        repeat(
          seq(',', $.arg),
        ),
        optional(','),
      )),
      // Use token.immediate to avoid confusing the closing | as the start of a new function
      token.immediate("|"),
    ),

    try: $ => seq(
      'try',
      $._line_or_block,
      repeat1($.catch),
      optional($.finally),
    ),

    catch: $ => seq(
      'catch',
      $._catch_arg,
      $._line_or_block,
    ),

    _catch_arg: $ => choice(
      $.identifier,
      $.unpacked_map,
    ),

    finally: $ => seq(
      'finally',
      $._line_or_block,
    ),

    escape: $ => seq(
      '\\',
      choice(
        // Any single non-whitespace character
        // (we don't need to list all valid escape characters)
        /\S/,
        // Newline
        /\r?\n/,
        // \x42
        /x[0-9a-fA-F]{2}/,
        // \u{123456}
        /u\{[0-9a-fA-F]{1,6}\}/,
      )
    ),

    _map_block_tuple_value: $ => prec(PREC.comma, seq(
      $._expression,
      ',',
      $._newline,
    )),
  }
});

function assign_op($, operator, precedence_fn) {
  return precedence_fn(PREC.assign, seq(
    $._assign_target,
    operator,
    $._expression
  ));
}

function binary_op($, operator, operator_continuation, precedence_fn, precedence) {
  const operator_token = operator_continuation == null
    ? operator
    : choice(operator, seq(operator_continuation, operator));

  return precedence_fn(precedence, seq(
    $._term_ext,
    choice(
      seq(
        operator_token,
        $._term_ext,
      ),
      seq(
        operator_token,
        $._indent,
        $._term_ext,
        $._dedent,
      )
    ),
  ));
}

function keyword_expression_single($, keyword) {
  return prec.right(seq(
    keyword,
    optional($._expression),
  ));
}

function keyword_expression_multi($, keyword, precedence) {
  return prec.right(precedence, seq(
    keyword,
    optional(
      choice(
        $._expressions,
        seq(
          $._indent,
          $._expressions,
          $._dedent,
        ),
        $.map_block,
      ))
  ));
}
