test/corpus/maps.txt
===========================================================================================
map_inline
===========================================================================================

{}
{foo, bar}
{foo: 42, 'bar': 1 + 1,}

---

(module
  (map)
  (map
    (entry_inline
      key: (identifier))
    (entry_inline
      key: (identifier)))
  (map
    (entry_inline
      key: (identifier)
      value: (number))
    (entry_inline
      key: (string
        (string_quote)
        (string_content)
        (string_quote))
      value: (binary_op
        (number)
        (number)))))

===========================================================================================
map_inline_assigned
===========================================================================================

foo =
  {bar: 42}

---

(module
  (assign
    lhs: (identifier)
    rhs: (map
      (entry_inline
        key: (identifier)
        value: (number)))))

===========================================================================================
map_inline_multiline
===========================================================================================

{
  foo: 42, 'bar': 1 + 1,
            baz: 'xyz'
}

---

(module
  (map
    (entry_inline
      key: (identifier)
      value: (number))
    (entry_inline
      key: (string
        (string_quote)
        (string_content)
        (string_quote))
      value: (binary_op
        (number)
        (number)))
    (entry_inline
      key: (identifier)
      value: (string
        (string_quote)
        (string_content)
        (string_quote)))))

===========================================================================================
map_block
===========================================================================================

return
  foo: 42
  'bar': 99

---

(module
  (return
    (map_block
      (entry_block
        key: (identifier)
        value: (number))
      (entry_block
        key: (string
          (string_quote)
          (string_content)
          (string_quote))
        value: (number)))))

===========================================================================================
map_block_nested
===========================================================================================

return
  'foo': 42
  bar:
    baz: 99
  qux: 'hi'

---

(module
  (return
    (map_block
      (entry_block
        key: (string
          (string_quote)
          (string_content)
          (string_quote))
        value: (number))
      (entry_block
        key: (identifier)
        value: (map_block
          (entry_block
            key: (identifier)
            value: (number))))
      (entry_block
        key: (identifier)
        value: (string
          (string_quote)
          (string_content)
          (string_quote))))))

===========================================================================================
map_block_meta
===========================================================================================

return
  @+: null
  @test foo: || true
  @meta bar: 99

---

(module
  (return
    (map_block
      (entry_block
        key: (meta)
        value: (null))
      (entry_block
        key: (meta
          (test)
          name: (identifier))
        value: (function
          (args)
          body: (true)))
      (entry_block
        key: (meta
          id: (meta_id)
          name: (identifier))
        value: (number)))))

===========================================================================================
map_block_call_as_value
===========================================================================================

return
  foo: bar
         100,
         200,
         300
---

(module
  (return
    (map_block
      (entry_block
        key: (identifier)
        value: (call_indented
          function: (identifier)
          (call_arg
            (number))
          (call_arg
            (number))
          (call_arg
            (number)))))))

===========================================================================================
map_block_single_entry_tuple_without_parentheses
===========================================================================================

return
  foo: 1,
  bar: 99
---

(module
  (return
    (map_block
      (entry_block
        key: (identifier)
        value: (comma_separated
          (number)
        )
      )
      (entry_block
        key: (identifier)
        value: (number)
      )
    )
  )
)

===========================================================================================
map_block_tuple_without_parentheses
===========================================================================================

return
  foo: 1, 2,
  bar: baz
---

(module
  (return
    (map_block
      (entry_block
        key: (identifier)
        value: (comma_separated
          (number)
          (number)
        )
      )
      (entry_block
        key: (identifier)
        value: (identifier)
      )
    )
  )
)
