test/corpus/try_catch.txt
===========================================================================================
try_catch_with_finally
===========================================================================================

try
  throw foo()
catch error
  throw error
finally
  x = 42

---

(module
  (try
    (block
      (throw
        (chain
          start: (identifier)
          (call_args))))
    (catch
      (identifier)
      (block
        (throw
          (identifier))))
    (finally
      (block
        (assign
          lhs: (identifier)
          rhs: (number))))))

===========================================================================================
try_catch_finally_in_function
===========================================================================================

x = ||
  try
    42
  catch _
    99
  finally
    123

---

(module
  (assign
    lhs: (identifier)
    rhs: (function
      (args)
      body: (block
        (try
          (block
            (number))
          (catch
            (identifier)
            (block
              (number)))
          (finally
            (block
              (number))))))))

===========================================================================================
try_catch_no_finally
===========================================================================================

try
  foo()
catch {e}
  bar()

---

(module
  (try
    (block
      (chain
        start: (identifier)
        (call_args)))
    (catch
      (unpacked_map
        binding: (variable
          (identifier)))
      (block
        (chain
          start: (identifier)
          (call_args))))))

===========================================================================================
try_catch_followed_by_expression
===========================================================================================

try
  123
catch error
  456
'hello'

---

(module
  (try
    (block
      (number))
    (catch
      (identifier)
      (block
        (number))))
  (string
    (string_quote)
    (string_content)
    (string_quote)))
